Simplify some option names